revise intro to modal logic

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -136,6 +136,12 @@
 	 	\bibitem{hwang}
 	 	Hwang, M.; Lin, J. ``Information dimension, information overload and decision quality." Journal of Informatin Science 25 (1999): 213-218.
 	 	
+	 	\bibitem{rescher}
+	 	Rescher, Nicholas. ``Epistemic Logic." University of Pittsburgh Press. 2005.
+	 	
 	 	\bibitem{simpson}
 	 	Simpson, C.; Prusak, L. ``Troubles with Information Overload = Moving from Quantity to Quality in Information Provision." International Journal of Information Management 15 (1995): 413-425.
+	 	
+	 	\bibitem{vonWright}
+	 	von Wright, G.H.. ``An Essay on Modal Logic." Amsterdam: North-Holland Publishing Company. 1951.
 \end{thebibliography}
