--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -106,19 +106,20 @@ Recent work at the intersection of game theory and logic focuses on the informat
 The proceeding sections introduce the various logical systems that form a foundation for the work of this thesis, starting with modal logic in its traditional philosophical interpretation, and expanding to epistemic and doxastic logic. Then, we introduce dynamic logic, and its expansion into Dynamic Epistemic Logic and Public Announcement Logic.
 
 \section{Modal Logic}
-Philosophers seek to study not just empirical facts of the actual world, but also necessary truths that hold both in the actual world and in all worlds that might exist. Examples of necessary truths are those of mathematics, which do not depend on any contingent facts of the world in order to be true. The definitions of natural numbers and the the addition function guarantee that in all possible worlds, \emph{2 + 2 = 4}. Modal logic allows us to reason about necessary, possible, and actual truths, through the use of modal operators. What follows is a brief illustration of the concepts and example proofs in modal logic.
+Philosophers going back to Aristotle have noted a distinction between contingent truth, possible truth, and necessary truth. Necessary truths could not have been otherwise. The definitions of natural numbers and the addition function guarantee that in all possible worlds, \emph{2 + 2 = 4}. On a plane, the truths of Euclidean geometry are necessarily true. ``There is life on Saturn's moon Enceladus" is a possible truth. ``Enceladus has water on it" is a contingent truth. What about ``Water is H20"? Modal logic allows us to reason about necessary and possible truths, through the use of modal operators. What follows is a brief illustration of the concepts of modal logic.
 
-Suppose $p$ is the aforementioned arithmetic expression. Obviously, $p$ is true in the actual world. We can make the stronger claim that $p$ is necessarily true, that is, true in all possible worlds, with the modal operator for necessity: $\Box p$. We can explore our first modal inference with these two components: $\Box p \iimplies p$. If $p$ is necessarily true, is it true? Intuitively, the answer is `yes', and indeed a modal logic of metaphysical necessity includes this axiom for all formulas $\varphi$: $\Box \varphi \iimplies \varphi$. 
+The modal logic for reasoning about metaphysical necessity is called $\mathit{S5}$. $\mathit{S5}$ is the modal logic that grounds our intuitive reasoning in the following examples and proofs. Suppose $p$ is the arithmetic expression ``2 + 2 = 4". Obviously, $p$ is true in the actual world. We can make the stronger claim that $p$ is necessarily true, but what does this mean? As informal shorthands, initial attempts to define necessary truths might appeal, as I did above, to the claim that they could not possibly have been false. But then what do we mean by ``possible"? The formal semantics for dealing with these questions comes from Saul Kripke, and we introduce that machinery in the next section. For now, we say a statement is necessarily true if and only if it is true in all possible worlds. The modal operator for necessity makes the formal statement: $\Box p$. Consider the following inference, where $\iimplies$ means ``implies": $\Box p \iimplies p$. This reads, ``Necessarily $p$ implies $p$," or equivalently, ``If $p$ is necessarily true, then $p$ is true." If $p$ is necessarily true, is $p$ true? Intuitively, the answer is `yes', and indeed a modal logic of metaphysical necessity includes this axiom for all formulas $\varphi$: $\Box \varphi \iimplies \varphi$. 
 
-What other inferences can we make, based on our intuitive notion of necessity and possibility? What about ``if $p$ is true, then $p$ is possibly true"? To formalize this, we need the modal operator for possibility: $\Diamond$. So, the modal formula would be $p \iimplies \Diamond p$. This seems true as well, and indeed it is an axiom: $\varphi \iimplies \Diamond \varphi$. In fact, those two axioms are equivalent. The definition of $\Diamond \varphi \equiv \tlnot \Box \tlnot \varphi$, for any arbitrary formula $\varphi$. This states that something is possible if and only if it is not necessarily false. It can also be said that something is necessary if and only if it is not possibly false: $\Box \varphi \equiv \tlnot \Diamond \tlnot \varphi$. We can now prove that the two axioms are equivalent.
+What other inferences can we make, based on our intuitive notion of necessity and possibility? What about ``if $p$ is true, then $p$ is possibly true"? To formalize this, we need the modal operator for possibility: $\Diamond$. So, the modal formula would be $p \iimplies \Diamond p$. This seems true as well, and indeed it is an axiom: $\varphi \iimplies \Diamond \varphi$. 
+%In fact, those two axioms are equivalent. The definition of $\Diamond \equiv \tlnot \Box \tlnot$. This states that something is possible if and only if it is not necessarily false. It can also be said that something is necessary if and only if it is not possibly false: $\Box \equiv \tlnot \Diamond \tlnot$. We can now prove that the two axioms are equivalent.
 
-\begin{proof}
-	We first prove $\Box \varphi \iimplies \varphi$ implies $\varphi \iimplies \Diamond \varphi$, for any arbitrary $\varphi$ so long as it is the same on each side of the $\iimplies$. We begin by assuming $Box \varphi \iimplies \varphi$. By the definition of $\Box$, we can substitute the equivalent formula $\tlnot \Diamond \tlnot \varphi \iimplies \varphi$. By contraposition, it holds that $\tlnot \varphi \iimplies \Diamond \tlnot \varphi$. But $\varphi$ is any arbitrary formula, including $\tlnot \varphi$. So we can substitute arbitrary formulas and get $\varphi \iimplies \Diamond \varphi$. What matters is that the $\varphi$ on the left and right of the $\iimplies$ are the same, not that they are the same in each axiom.
+%\begin{proof}
+%	We first prove $\Box \varphi \iimplies \varphi$ implies $\varphi \iimplies \Diamond \varphi$, for any arbitrary $\varphi$ so long as it is the same on each side of the $\iimplies$. We begin by assuming $\Box \varphi \iimplies \varphi$. By the definition of $\Box$, we can substitute the equivalent formula $\tlnot \Diamond \tlnot \varphi \iimplies \varphi$. By contraposition, it holds that $\tlnot \varphi \iimplies \Diamond \tlnot \varphi$. But $\varphi$ is any arbitrary formula, including $\tlnot \varphi$. So we can substitute arbitrary formulas and get $\varphi \iimplies \Diamond \varphi$. What matters is that the $\varphi$ on the left and right of the $\iimplies$ are the same, not that they are the same in each axiom.
 	
-	Next we prove that $\varphi \iimplies \Diamond \varphi$ implies $\Box \varphi \iimplies \varphi$, for arbitrary $\varphi$'s in each axiom. Assume $\varphi \iimplies \Diamond \varphi$. We can substitute in the equivalent formula using the definition of $\Diamond$ and get $\varphi \iimplies \tlnot \Box \tlnot \varphi$. By contraposition, it follows that $\Box \tlnot \varphi \iimplies \tlnot \varphi$. We substitute in $\varphi$ for $\tlnot \varphi$ as the arbitrary formula, and have $\Box \varphi \iimplies \varphi$.
-\end{proof}
+%	Next we prove that $\varphi \iimplies \Diamond \varphi$ implies $\Box \varphi \iimplies \varphi$, for arbitrary $\varphi$'s in each axiom. Assume $\varphi \iimplies \Diamond \varphi$. We can substitute in the equivalent formula using the definition of $\Diamond$ and get $\varphi \iimplies \tlnot \Box \tlnot \varphi$. By contraposition, it follows that $\Box \tlnot \varphi \iimplies \tlnot \varphi$. We substitute in $\varphi$ for $\tlnot \varphi$ as the arbitrary formula, and have $\Box \varphi \iimplies \varphi$.
+%\end{proof}
 
-It is obvious then that $\Box \varphi \iimplies \Diamond \varphi$ is a theorem. This states that if something is necessarily true then it is possibly true. What about the other direction: $\Diamond \varphi \iimplies \Box \varphi$? It turns out this is not a theorem under the typical notions of necessity and possibility. But this raises a question about how we would present a counterexample that disproves it. To do this, we need a semantics for the logic. The semantics we use are called \emph{possible world semantics}, and they are due to Saul Kripke~\cite{Kripke}. One would be hard-pressed to find a species of modal logic, whether in economics, computer science, or philosophy, that does not use possible world semantics in some form or another. Sometimes they are referred to as \emph{Kripke semantics}.
+It is obvious then that $\Box \varphi \iimplies \Diamond \varphi$ is a theorem. This states that if something is necessarily true then it is possibly true. What about the other direction: $\Diamond \varphi \iimplies \Box \varphi$? It turns out this is not a theorem under the typical notions of necessity and possibility, nor under the axioms of $\mathit{S5}$. But this raises a question about how we would present a counterexample that disproves it. To do this, we need a semantics for the logic. The semantics we use are called \emph{possible world semantics}, and they are due to Saul Kripke~\cite{Kripke}. One would be hard-pressed to find a species of modal logic, whether in economics, computer science, or philosophy, that does not use possible world semantics in some form or another. Sometimes they are referred to as \emph{Kripke semantics}.
 
 In possible world semantics, a graph structure is created with worlds as nodes and accessibility relations among worlds as the edges in the graph. Propositional formulas are true or false at each world. These graph structures are typically called Kripke structures. We can define the following Kripke structure, $\mathcal{M} = \{W, R, V\}$, where $W$ is a finite set of worlds, $\{w, v\}$, $R$ is a binary accessibility relation defined on those worlds $\{(w,v), (v,w)\}$, meaning $w$ has access to $v$ and $v$ has access to $w$, and $V$ is a \emph{valuation} function, which maps propositions to sets of worlds at which they are true. For example, if $p$ is true at $w$, then $w \in V(p)$. In our model we only care about the proposition $p$, which now stands for some contingent proposition, like ``all swans are white". Formally, we say $w \not\in V(p)$ if not all swans are white in world $w$, denoted by $\tlnot p$, while $w \in V(p)$ if they are, denoted by $p$. The following figure illustrates $\mathcal{M}$:
 
@@ -140,24 +141,24 @@ In possible world semantics, a graph structure is created with worlds as nodes a
 	\caption{$\mathcal{M}$: A simple counterexample using possible world semantics.}
 \end{figure}
 
-According to possible world semantics, $\Box \varphi$ is true at a world, written $w \models \Box \varphi$ for world $w$, if and only if for all worlds $v$ such that $R(w,v)$ ($v$ is accessible to $w$ by the $R$ relation), $v \models \varphi$. This says a formula is necessarily true at a world if and only if it is true at all worlds accessible by that world. Similarly, $w \models \Diamond \varphi$ if and only if there is some world $v$ such that $R(w,v)$ and $v \models \varphi$. In $\mathcal{M}$, $w$ is $R$-accessible to itself, so there is a world accessible to $w$ where $p$ is false, and thus $w \models \tlnot \Box p$. However, since $v$ is $R$-accessible to $w$, and $v \models p$, it is true that $w \models \Diamond p$. Thus, we have $w \models \Diamond p$ and $w \models \tlnot \Box p$, a negation of $\Diamond p \iimplies \Box p$, so it cannot be the case that $\Diamond \varphi \iimplies \Box \varphi$ is a theorem, for arbitrary formula $\varphi$.
+According to possible world semantics, $\Box \varphi$ is true at a world $w$, written $w \models \Box \varphi$, if and only if for all worlds $v$ such that $R(w,v)$ ($v$ is related to $w$ by the $R$ relation), $v \models \varphi$. This says a formula is necessarily true at a world if and only if it is true at all worlds accessible by that world according to the underlying $R$ relation. Similarly, $w \models \Diamond \varphi$ if and only if there is some world $v$ such that $R(w,v)$ and $v \models \varphi$. In $\mathcal{M}$, $w$ is $R$-accessible to itself, so there is a world accessible to $w$ where $p$ is false, and thus $w \models \tlnot \Box p$. However, since $v$ is $R$-accessible to $w$, and $v \models p$, it is true that $w \models \Diamond p$. Thus, we have $w \models \Diamond p$ and $w \models \tlnot \Box p$, a negation of $\Diamond p \iimplies \Box p$, so it cannot be the case that $\Diamond \varphi \iimplies \Box \varphi$ is a theorem, for arbitrary formula $\varphi$.
 
-While introducing the concepts and what proofs look like in modal logic, syntax and semantics have been alluded to sporadically, but I have not yet formally defined them. I do that here, having properly motivated them.
+$\mathit{S5}$, while a very important modal logic, is not the only one. The way it is distinguished from other modal logics, and indeed that way any are distinguishable from each other, is based entirely on the definition of $R$. For $\mathit{S5}$, $R$ is a symmetric, transitive, reflexive binary relation on worlds. Thus, that is how ``possibility" is formally defined, and by extension, ``necessarily". We formally define these notions in the next section, along with the syntax and semantics of basic modal logic, sometimes call propositional modal logic.
 
 \section{Modal Logic Syntax and Semantics}~\label{molo_syn_sem}
-This section formally defines the syntax, what the logic looks like, and the semantics, what the truth conditions are for the logic. Before looking at the syntax for modal logic, we examine that of Boolean propositional logic.
+This section formally defines the syntax, what the logic looks like, and the semantics, what the truth conditions are for the logic.
 
 Recall that Boolean logic is a simple logic for reasoning about basic propositions using the logical connectives `and', `or', `not', and `if...then'. It forms the foundation of most logics and has applications ranging from philosophy to circuit design. Propositions are represented as constants {\emph p,\ \emph q} and well-formed formulas of the language are constants and any proper combination of constants using the above logical connectives, represented symbolically as,
 $$\varphi \stackrel{def}{=} p\  |\  \varphi \wedge \varphi\  |\  \varphi \vee \varphi\  |\ \neg \varphi \ |\   \varphi \rightarrow \varphi. 
 $$
 
-As illustrated in the previous section, modal logic adds to propositional logic with modal operators for necessary and possible truths. The syntax for propositional logic is extended in the following way:
+As illustrated in the previous section, modal logic adds to propositional logic with modal operators for necessary and possible truths. The syntax for propositional logic is extended in the following way to make modal logic:
 $$\varphi \stackrel{def}{=} p\  |\  \varphi \wedge \varphi\  |\  \varphi \vee \varphi\  |\ \neg \varphi \ |\   \varphi \rightarrow \varphi\ |\ \Box \varphi \ |\ \Diamond \varphi. 
 $$
 
 The semantics for Boolean logic are simply truth tables for each connectives, which I will not reproduce here. Because the connectives are truth-functional, truth tables suffice. However, the operators in modal logic are not truth functional, and require more complex semantics, which we earlier mentioned are called possible world semantics. They are as follows.
 
-For a Kripke model $\mathcal{M} = \{W, R, V\}$ such that $W$ is a set of possible worlds, $R$ is a binary relation on those worlds, and $V$ is a valuation function mapping truth values to propositions at worlds,  
+For a Kripke model $\mathcal{M} = \{W, R, V\}$ such that $W$ is a set of possible worlds, $R$ is a binary relation on those worlds, and $V$ is a valuation function mapping atomic propositions to the sets worlds satisfying them,  
 
 \begin{align*}
 w \models p\  &\mathbf{iff}\ w \in V(p) \\
@@ -167,12 +168,17 @@ w \models \Box \varphi\  &\mathbf{iff}\ \forall v,\ R(w,v)\  \mathnormal{implies
 w \models \Diamond \varphi\ &\mathbf{iff}\ \exists v,\ R(w,v)\ \mathnormal{and}\ v\models \varphi.
 \end{align*}
 
-The character of a modal logic is determined by the binary relation on worlds underlying the modal operators. The logic we have thus far examined is one at which every world is accessible to itself by the binary relation. This condition is called a \emph{frame} condition, and the models that satisfy this condition belong to said frame. This frame is called the \emph{reflexive} frame, because its defining condition is that the accessibility relation is a reflexive predicate:
+The character of a modal logic is determined by the binary relation on worlds underlying the modal operators. The logic we used for our intuitive notion of necessity in the previous secion, $\mathit{S5}$, has a $R$ relation in which every world is accessible to itself by the binary relation. It is also one in which the $R$ relation is transitive and symmetric. These conditions are called a \emph{frame} conditions, and the models that satisfy these conditions belong to said frame. All reflexive frames have the following frame conditions:
 \begin{equation}
 \forall x,\ R(x,x)
 \end{equation}
+Likewise, all reflexive frames have the following axiom:
+\begin{equation}
+	\Box \varphi \iimplies \varphi
+\end{equation}
+It is not just a stipulation that all reflexive frames must have that axiom: They have that axiom \emph{because} they have that frame condition. This is due to correspondence theory, which we explain later on.
 
-Relaxing this condition changes the frame, and in doing so changes the logic. If we remove the reflexivity condition, the above axioms are no longer axioms, and the above theorem no longer holds. This means that we can specify the axioms we want by specifying the frame condition on the accessibility relation. Each frame condition corresponds to a modal logic axiom. In addition to reflexivity, the other common frame conditions are as follows, with their corresponding modal logic axiom:
+Relaxing a frame condition changes the $R$ relation, and in doing so changes the logic. If we remove the reflexivity condition, the above axioms are no longer axioms, and the above theorem no longer holds. This means that we can specify the axioms we want by specifying the frame condition on the accessibility relation. Each frame condition corresponds to a modal logic axiom. In addition to reflexivity, the other common frame conditions are as follows, with their corresponding modal logic axiom:
 \begin{itemize}
 	\item Transitivity
 	\begin{eqnarray}
