begin completeness refinement

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -185,6 +185,8 @@ Next we turn to completeness.
 
 \subsection{Completeness}
 
+Completeness proofs in contemporary modal logic research follow the following format. First, a \emph{canonical model} is defined such that it belongs to the Kripke frames for which the logic under investigation is sound, and where the set of worlds, relations, and valuation function are formally tied to the logical closure of the same logic. Thus, the model combines the deducibility relation of the proof theory and the satisfaction relation of the model theory in order to show that valid formulas are deducible, which proves completeness of the logic.
+
 We define the notions of a \emph{Maximal Consistent Set}, and a \emph{Canonical Model} for the logic. Informally, a maximal consistent set of formulas is one that is a subset of the well-formed formulas of the language $\mathcal{L}_{DASL}$ according to the syntax presented earlier, whose members are consistent with each other, such that adding even a single formula to the set would ruin consistency. Another way to phrase this last part is to say that our maximal consistent set is not a proper subset of any other consistent subset of $\mathcal{L}_{DASL}$. \\
 $\mathbf{Definition}$. Maximal Consistent Set.\\
 For a set of formulas $\Gamma \subseteq \mathcal{L}_{DASL}$, $\Gamma$ is maximal consistent iff\\
